--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id="root">
     </div>
-    <script src="bundle.js"></script>
+    <script src="http://localhost:3000/build/main.bundle.js"></script>
   </body>
 </html>
